# fantac

./: CMakeLists.txt  README.md  build.sh  compile.sh  test.c  test_main.c  test_main.cpp
lib/AST/: AST.h  ASTInterfaces.h  ASTLogger.cpp  ASTLogger.h
lib/CodeGen/: IRGenerator.cpp  IRGenerator.h
lib/Compiler/: FantaC.cpp  FantaC.h
lib/Parse/: Lexer.cpp  Lexer.h  ParseInterfaces.h  Parser.cpp  Parser.h  Token.cpp  Token.h  TokenCache.cpp  TokenCache.h  TokenLexer.h
lib/Util/: LoggerFactory.h  UtilInterfaces.h
src/: main.cpp
